--- a/client/src/less/message-feed.less
+++ b/client/src/less/message-feed.less
@@ -2,8 +2,8 @@
 .message-feed {
   background-color: #FEFEFF;
   font-size: .85rem;
-  width: 100%;
-  max-width: 500px;
+  width: 500px;
+  max-width: 100%;
   border: solid 1px lightgray;
   padding: 30px;
   border-radius: 5px;
